--- a/package.json
+++ b/package.json
@@ -2,26 +2,29 @@
   "name": "gxkutil",
   "version": "1.0.1",
   "description": "",
-  "main": "lib/index.js",
-  "module": "lib/index.esm.js",
+  "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./lib && rollup -c rollup.config.js",
+    "build": "rm -rf ./lib && set NODE_ENV=production && rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
+    "@types/node": "^17.0.40",
     "@typescript-eslint/parser": "^5.27.1",
+    "babel-eslint": "^10.1.0",
     "rollup": "^2.75.5",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.32.1",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
     "axios": "^0.27.2"
   }
 }
