--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gxkutil",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,20 +11,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@rollup/plugin-json": "^4.1.0",
     "@types/node": "^17.0.40",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
     "rollup": "^2.75.5",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.32.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
     "axios": "^0.27.2"
   }
 }
