--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true, //加载JSON
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "noUnusedLocals": false, //未使用变量报错
+    "noUnusedLocals": true, //未使用变量报错
     "removeComments": false, //删除注释
     "declaration": true, //生成定义文件
     "declarationMap": false,
