--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gxkutil",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -30,7 +30,8 @@
     "rollup-plugin-typescript2": "^0.32.1",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "ttypescript": "^1.5.13"
   },
   "dependencies": {
     "axios": "^0.27.2"
