--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gxkutil",
-  "version": "1.0.3",
+  "version": "1.0.8",
   "description": "",
-  "module": "lib/index.js",
+  "module": "lib/index.mjs",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./lib && set NODE_ENV=production && rollup -c rollup.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build&publish": "rm -rf ./lib && rollup -c rollup.config.js && cd ./lib && npm publish",
+    "build": "rm -rf ./lib && rollup -c rollup.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,6 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-replace": "^4.0.0",
     "@types/node": "^17.0.40",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
@@ -30,8 +30,8 @@
     "rollup-plugin-typescript2": "^0.32.1",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.3",
-    "ttypescript": "^1.5.13"
+    "ttypescript": "^1.5.13",
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "axios": "^0.27.2"
