--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gxkutil",
-  "version": "1.0.8",
+  "version": "1.1.1",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build&publish": "rm -rf ./lib && rollup -c rollup.config.js && cd ./lib && npm publish",
+    "build_publish": "rm -rf ./lib && rollup -c rollup.config.js && cd ./lib && npm publish",
     "build": "rm -rf ./lib && rollup -c rollup.config.js"
   },
   "author": "",
