--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
-    "src/**/*.test.ts"
+    "src/**/*.test.ts",
+    "./*.ts",
   ],
-  "exclude": ["node_modules", "lib"]
+  "exclude": ["node_modules", "lib",]
 }
