--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.40",
+    "@types/spark-md5": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "babel-eslint": "^10.1.0",
@@ -40,6 +42,9 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "clipboard": "^2.0.11",
+    "crypto-js": "^4.1.1",
+    "spark-md5": "^3.0.2"
   }
 }
