--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "src/**/*.d.ts",
     "src/**/*.test.ts",
     "./*.ts",
-    "learn/**/*.ts"
+    // "learn/**/*.ts"
   ],
   "exclude": ["node_modules", "lib",]
 }
