--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gxkutil",
-  "version": "1.1.4",
+  "name": "ks",
+  "version": "0.0.1",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.js",
