--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "gxk": "^0.0.1"
   },
   "dependencies": {
     "axios": "^0.27.2",
