--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "src/**/*.d.ts",
     "src/**/*.test.ts",
     "./*.ts",
+    "test.ts"
     // "learn/**/*.ts"
   ],
   "exclude": ["node_modules", "lib",]
