--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gxk",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.js",
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.1",
     "babel-preset-latest": "^6.24.1",
+    "gxk": "^0.0.3",
     "jest": "^28.1.1",
     "rollup": "^2.75.5",
     "rollup-plugin-copy": "^3.4.0",
@@ -40,8 +41,7 @@
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.7.3",
-    "gxk": "^0.0.1"
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "axios": "^0.27.2",
