--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
