--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "gxk",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.cjs",
   "scripts": {
+    "prepare": "husky install",
     "test": "jest",
     "build": "rm -rf ./lib && rollup -c rollup.config.ts --configPlugin typescript && rm -rf ./lib/rollup.config.d.ts ",
     "build_link": "npm run build && npm link",
@@ -41,7 +42,8 @@
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "husky": "^8.0.1"
   },
   "dependencies": {
     "axios": "^0.27.2",
