--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -32,6 +34,7 @@
     "babel-jest": "^28.1.1",
     "babel-preset-latest": "^6.24.1",
     "gxk": "^0.0.4",
+    "husky": "^8.0.1",
     "jest": "^28.1.1",
     "rollup": "^2.75.5",
     "rollup-plugin-copy": "^3.4.0",
@@ -42,8 +45,7 @@
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.7.3",
-    "husky": "^8.0.1"
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "axios": "^0.27.2",
