--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepare": "husky install",
     "test": "jest",
     "build": "rm -rf ./lib && rollup -c rollup.config.ts --configPlugin typescript && rm -rf ./lib/rollup.config.d.ts ",
-    "build_link": "npm run build && npm link",
+    "build_link": "npm run build && cd ./lib && npm link",
     "build_publish": "npm run build && cd ./lib && npm publish"
   },
   "author": "gxk",
