--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gexk/noa",
-  "version": "0.0.29",
+  "name": "@gexk/gxk",
+  "version": "0.0.27",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.cjs",
