--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.test.ts",
-    "./*.ts",
+    "./*.ts", "learn/common/jsonParse.ts",
   ],
   "exclude": ["node_modules", "lib"]
 }
