--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "prepare": "husky install",
     "test": "jest",
     "build": "rm -rf ./%npm_package_config_dist% && rollup -c rollup.config.ts --configPlugin typescript && rm -rf ./%npm_package_config_dist%/rollup.config.d.ts ",
-    "build_link": "npm run build && cd ./%npm_package_config_dist% && npm link",
-    "publish_patch": "npm version patch && npm run build && cd ./%npm_package_config_dist% && npm publish --access public",
-    "publish_minor": "npm version minor && npm run build && cd ./%npm_package_config_dist% && npm publish --access public",
-    "publish_major": "npm version major && npm run build && cd ./%npm_package_config_dist% && npm publish --access public"
+    "build_link": "pnpm run build && cd ./%npm_package_config_dist% && pnpm link",
+    "build_publish": "pnpm run build && cd ./%npm_package_config_dist% && pnpm publish --access public",
+    "publish_patch": "pnpm version patch && pnpm run build_publish",
+    "publish_minor": "pnpm version minor && pnpm run build_publish",
+    "publish_major": "pnpm version major && pnpm run build_publish"
   },
   "author": "gxk",
   "license": "ISC",
