--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gexk/gxk",
-  "version": "0.1.1",
+  "name": "tiga",
+  "version": "0.0.0",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.cjs",
