--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shine-tiga",
+  "name": "@monster-hunter/fatalis",
   "version": "0.0.2",
   "description": "",
   "module": "lib/index.mjs",
