chore: 去除axios的封装

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "src/**/*.test.ts",
     "./*.ts", "learn/common/jsonParse.ts",
   ],
-  "exclude": ["node_modules", "lib"]
+  "exclude": ["node_modules", "lib", "learn"]
 }
