--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@monster-hunter/fatalis",
-  "version": "0.0.11",
+  "name": "nidhogg",
+  "version": "0.0.0",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.cjs",
