--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nidhogg",
-  "version": "0.1.2",
+  "name": "@ultra-man/noa",
+  "version": "0.0.0",
   "description": "",
   "module": "lib/index.mjs",
   "main": "lib/index.cjs",
