--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "config": {
     "dist": "lib"
   },
+  "keywords":  ["typescript", "library"],
   "scripts": {
     "prepare": "husky install",
     "test": "jest",
