--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@ultra-man/noa",
   "version": "0.0.10",
   "description": "The first light of the universe",
-  "module": "noa/index.mjs",
-  "main": "noa/index.cjs",
+  "module": "src/index.ts",
+  "main": "src/index.ts",
   "config": {
     "dest": "noa"
   },
@@ -15,7 +15,6 @@
     "prepare": "husky install",
     "test": "jest",
     "build": "rm -rf ./%npm_package_config_dest% && rollup -c rollup.config.ts --configPlugin typescript && rm -rf ./%npm_package_config_dest%/rollup.config.d.ts ",
-    "build_link": "pnpm run build && cd ./%npm_package_config_dest% && pnpm link",
     "build_publish": "pnpm run build && cd ./%npm_package_config_dest% && pnpm publish --access public",
     "publish_patch": "pnpm version patch && pnpm run build_publish",
     "publish_minor": "pnpm version minor && pnpm run build_publish",
