--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "clipboard": "^2.0.11",
     "crypto-js": "^4.1.1",
     "spark-md5": "^3.0.2"
   }
