--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,12 @@
     "declaration": true, //生成定义文件
     "declarationMap": false,
     "types": ["node", "jest"], //导入类型包
-    "importsNotUsedAsValues": "error",
+    // "importsNotUsedAsValues": "error",
     "paths": {
       "src/*": ["src/*"],
     },
+    // "verbatimModuleSyntax": true,
+    
   },
   "include": [
     "src/**/*.ts",
