--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,5 @@
 {
-    "eslint.validate": [
-        "javascript",
-        "typescripe",
-        "javascriptreact",
-        "html",
-        "vue"
-      ],
-    "editor.formatOnSave": true
+  "eslint.validate": ["javascript", "typescripe", "javascriptreact", "html", "vue"],
+  "editor.formatOnSave": true,
+  "editor.inlineSuggest.showToolbar": "onHover"
 }
