--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "clipboard": "^2.0.11",
     "crypto-js": "^4.1.1",
+    "print-js": "^1.6.0",
     "spark-md5": "^3.0.2"
   }
 }
