--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install",
     "test": "jest",
     "build": "rm -rf ./$npm_package_config_dest && rollup -c rollup.config.ts --configPlugin typescript && rm -rf ./$npm_package_config_dest/rollup.config.d.ts ",
-    "build_publish": "pnpm run build && cd ./$npm_package_config_dest && npm config set registry https://registry.npmjs.org && pnpm publish --access public && rm -rf ./$npm_package_config_dest && npm config set registry https://registry.npm.taobao.org",
+    "build_publish": "pnpm run build && cd ./$npm_package_config_dest && npm config set registry https://registry.npmjs.org && pnpm publish --access public && rm -rf ./$npm_package_config_dest && npm config set registry https://registry.npmmirror.com/",
     "publish_patch": "pnpm version patch && pnpm run build_publish",
     "publish_minor": "pnpm version minor && pnpm run build_publish",
     "publish_major": "pnpm version major && pnpm run build_publish"
