--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ultra-man/noa",
-  "version": "0.0.58",
+  "version": "0.0.57",
   "description": "The first light of the universe",
   "module": "src/index.ts",
   "main": "src/index.ts",
@@ -11,10 +11,10 @@
     "prepare": "husky install",
     "test": "jest",
     "build": "rm -rf ./$npm_package_config_dest && rollup -c rollup.config.ts --configPlugin typescript && rm -rf ./$npm_package_config_dest/rollup.config.d.ts ",
-    "build_publish": "pnpm run build && cd ./$npm_package_config_dest && npm config set registry https://registry.npmjs.org && pnpm publish --access public && rm -rf ./$npm_package_config_dest && npm config set registry https://registry.npmmirror.com/",
-    "publish_patch": "pnpm version patch && pnpm run build_publish",
-    "publish_minor": "pnpm version minor && pnpm run build_publish",
-    "publish_major": "pnpm version major && pnpm run build_publish"
+    "build_publish": "pnpm run build && cd ./$npm_package_config_dest && pnpm publish --access public && rm -rf ./$npm_package_config_dest && npm config set registry https://registry.npmmirror.com/",
+    "publish_patch": "npm config set registry https://registry.npmjs.org && pnpm version patch && pnpm run build_publish",
+    "publish_minor": "npm config set registry https://registry.npmjs.org && pnpm version minor && pnpm run build_publish",
+    "publish_major": "npm config set registry https://registry.npmjs.org && pnpm version major && pnpm run build_publish"
   },
   "keywords": [
     "typescript",
